--- a/Code/concatenating-weekly-df.ipynb
+++ b/Code/concatenating-weekly-df.ipynb
@@ -46,24 +46,19 @@
       ],
       "metadata": {
         "id": "2IUGBOXbWXti",
-        "outputId": "91a5abb8-4892-4752-d4ae-5bf437039683",
+        "outputId": "bbb2ba88-97d3-48d9-8375-05585aceb7ac",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pandas-gbq in /usr/local/lib/python3.10/dist-packages (0.25.0)\n",
-            "Collecting pandas-gbq\n",
-            "  Downloading pandas_gbq-0.26.0-py2.py3-none-any.whl.metadata (3.3 kB)\n",
-            "Requirement already satisfied: google-cloud-bigquery in /usr/local/lib/python3.10/dist-packages (3.25.0)\n",
-            "Collecting google-cloud-bigquery\n",
-            "  Downloading google_cloud_bigquery-3.27.0-py2.py3-none-any.whl.metadata (8.6 kB)\n",
+            "Requirement already satisfied: pandas-gbq in /usr/local/lib/python3.10/dist-packages (0.26.0)\n",
+            "Requirement already satisfied: google-cloud-bigquery in /usr/local/lib/python3.10/dist-packages (3.27.0)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from pandas-gbq) (75.1.0)\n",
             "Requirement already satisfied: db-dtypes<2.0.0,>=1.0.4 in /usr/local/lib/python3.10/dist-packages (from pandas-gbq) (1.3.1)\n",
             "Requirement already satisfied: numpy>=1.18.1 in /usr/local/lib/python3.10/dist-packages (from pandas-gbq) (1.26.4)\n",
@@ -96,35 +91,8 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.21.0->google-cloud-bigquery) (2.2.3)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.21.0->google-cloud-bigquery) (2024.12.14)\n",
             "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in /usr/local/lib/python3.10/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=2.13.0->pandas-gbq) (0.6.1)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.7.0->pandas-gbq) (3.2.2)\n",
-            "Downloading pandas_gbq-0.26.0-py2.py3-none-any.whl (36 kB)\n",
-            "Downloading google_cloud_bigquery-3.27.0-py2.py3-none-any.whl (240 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m240.1/240.1 kB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: google-cloud-bigquery, pandas-gbq\n",
-            "  Attempting uninstall: google-cloud-bigquery\n",
-            "    Found existing installation: google-cloud-bigquery 3.25.0\n",
-            "    Uninstalling google-cloud-bigquery-3.25.0:\n",
-            "      Successfully uninstalled google-cloud-bigquery-3.25.0\n",
-            "  Attempting uninstall: pandas-gbq\n",
-            "    Found existing installation: pandas-gbq 0.25.0\n",
-            "    Uninstalling pandas-gbq-0.25.0:\n",
-            "      Successfully uninstalled pandas-gbq-0.25.0\n",
-            "Successfully installed google-cloud-bigquery-3.27.0 pandas-gbq-0.26.0\n"
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.7.0->pandas-gbq) (3.2.2)\n"
           ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "google"
-                ]
-              },
-              "id": "538e8e28c5c749f1967e41c48c86b081"
-            }
-          },
-          "metadata": {}
         }
       ]
     },
@@ -137,7 +105,7 @@
       "metadata": {
         "id": "Ym7z8xPoWeOS"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -191,7 +159,7 @@
           "shell.execute_reply": "2024-12-06T22:08:52.187154Z"
         },
         "id": "jpEfwvTFVyES",
-        "outputId": "5b070867-e1b7-498c-95f2-cfc9fc5d0bff",
+        "outputId": "b8b3b1bd-78f4-4cce-bf7b-ae564eac2354",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -201,47 +169,47 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "       gameId  playId  target_rush  absoluteYardlineNumber  \\\n",
-            "0  2022091100    4068            0                      70   \n",
-            "1  2022091100    4131            0                      77   \n",
-            "2  2022091101    4128            0                      59   \n",
-            "3  2022091101    4174            0                      50   \n",
-            "4  2022091103    5120            0                      75   \n",
+            "       gameId  playId  target_rush   qb_depth  rb_depth  fb_depth  \\\n",
+            "0  2022091100    4068            0  14.990002  9.990002       0.0   \n",
+            "1  2022091100    4131            0   1.129998  6.469998       0.0   \n",
+            "2  2022091101    4128            0   0.949999  4.139999       0.0   \n",
+            "3  2022091101    4174            0   1.040001  4.080001       0.0   \n",
+            "4  2022091103    5120            0   1.069999  3.699999       0.0   \n",
             "\n",
-            "   preSnapHomeTeamWinProbability  preSnapVisitorTeamWinProbability  \\\n",
-            "0                       0.434159                          0.565841   \n",
-            "1                       0.439419                          0.560581   \n",
-            "2                       0.462624                          0.537376   \n",
-            "3                       0.465353                          0.534647   \n",
-            "4                       0.330262                          0.669738   \n",
+            "   absoluteYardlineNumber  preSnapHomeTeamWinProbability  \\\n",
+            "0                      70                       0.434159   \n",
+            "1                      77                       0.439419   \n",
+            "2                      59                       0.462624   \n",
+            "3                      50                       0.465353   \n",
+            "4                      75                       0.330262   \n",
             "\n",
-            "  offenseFormation receiverAlignment pff_passCoverage pff_manZone  ...  \\\n",
-            "0               NA                NA               NA          NA  ...   \n",
-            "1               NA                NA               NA          NA  ...   \n",
-            "2               NA                NA               NA          NA  ...   \n",
-            "3               NA                NA               NA          NA  ...   \n",
-            "4               NA                NA               NA          NA  ...   \n",
+            "   preSnapVisitorTeamWinProbability offenseFormation  ... TE_snap_motion  \\\n",
+            "0                          0.565841               NA  ...              0   \n",
+            "1                          0.560581               NA  ...              0   \n",
+            "2                          0.537376               NA  ...              0   \n",
+            "3                          0.534647               NA  ...              0   \n",
+            "4                          0.669738               NA  ...              0   \n",
             "\n",
-            "   TE_snap_motion  RB_motion  WR_motion  FB_motion TE_motion RB_shift  \\\n",
-            "0               0          0          0          0         0        0   \n",
-            "1               0          0          0          0         0        0   \n",
-            "2               0          0          0          0         0        0   \n",
-            "3               0          0          0          0         0        0   \n",
-            "4               0          0          0          0         0        0   \n",
+            "  RB_motion WR_motion  FB_motion  TE_motion  RB_shift  WR_shift FB_shift  \\\n",
+            "0         0         0          0          0         0         0        0   \n",
+            "1         0         0          0          0         0         0        0   \n",
+            "2         0         0          0          0         0         0        0   \n",
+            "3         0         0          0          0         0         0        0   \n",
+            "4         0         0          0          0         0         0        0   \n",
             "\n",
-            "   WR_shift  FB_shift  TE_shift    week  \n",
-            "0         0         0         0  week_1  \n",
-            "1         0         0         0  week_1  \n",
-            "2         0         0         0  week_1  \n",
-            "3         0         0         0  week_1  \n",
-            "4         0         0         0  week_1  \n",
+            "  TE_shift    week  \n",
+            "0        0  week_1  \n",
+            "1        0  week_1  \n",
+            "2        0  week_1  \n",
+            "3        0  week_1  \n",
+            "4        0  week_1  \n",
             "\n",
-            "[5 rows x 31 columns]\n",
-            "Final DataFrame shape: (15903, 31)\n"
+            "[5 rows x 34 columns]\n",
+            "Final DataFrame shape: (15903, 34)\n"
           ]
         }
       ],
-      "execution_count": 2
+      "execution_count": 8
     },
     {
       "cell_type": "code",
@@ -272,12 +240,12 @@
       ],
       "metadata": {
         "id": "6LA6lpioX5m3",
-        "outputId": "0da2e371-f487-405f-9a4b-6f7a904c390c",
+        "outputId": "6c7a5032-a0ec-4829-d3bb-975fdb0d953d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +410,7 @@
           "shell.execute_reply": "2024-12-06T22:08:55.229906Z"
         },
         "id": "8bqUBmVRVyEU",
-        "outputId": "9e1ed255-9a3f-4434-d7df-882a621c4785",
+        "outputId": "b07cacc6-a2c6-41a3-87b1-279c51139b72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -452,7 +420,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1/1 [00:00<00:00, 7869.24it/s]"
+            "100%|██████████| 1/1 [00:00<00:00, 801.82it/s]"
           ]
         },
         {
@@ -470,7 +438,7 @@
           ]
         }
       ],
-      "execution_count": 3
+      "execution_count": 10
     },
     {
       "cell_type": "code",
@@ -485,13 +453,13 @@
       ],
       "metadata": {
         "id": "njjIE5DOXdcy",
-        "outputId": "bb94b058-e29f-400e-d39b-8b1634316072",
+        "outputId": "43f123d4-1734-4407-f1b4-5b73817dde6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         }
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -552,7 +520,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_0b0f4477-d603-4bd0-b88d-4b33512ae5ec\", \"final_bdb_aggregated_data.csv\", 2182405)"
+              "download(\"download_6cbf702e-f520-47c5-9b08-feb402740649\", \"final_bdb_aggregated_data.csv\", 2840627)"
             ]
           },
           "metadata": {}
