--- a/Code/bigdata_pm.ipynb
+++ b/Code/bigdata_pm.ipynb
@@ -350,11 +350,11 @@
         "print(final_df['target_rush'].value_counts())"
       ],
       "metadata": {
-        "id": "8HCioll8pKt1",
-        "outputId": "4674a613-7e7d-47e8-9d1e-0e89cd7768ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8HCioll8pKt1",
+        "outputId": "4674a613-7e7d-47e8-9d1e-0e89cd7768ba"
       },
       "execution_count": 7,
       "outputs": [
@@ -633,13 +633,87 @@
     {
       "cell_type": "code",
       "source": [
-        "final_df.to_csv(\"preprocessed_modeling_data.csv\", index=False)"
+        "from google.colab import files\n",
+        "import joblib\n",
+        "\n",
+        "joblib.dump(final_df, 'preprocess_modeling_data.pkl')\n",
+        "files.download(\"preprocess_modeling_data.pkl\")"
       ],
       "metadata": {
-        "id": "gOiUdfUealfE"
+        "id": "gOiUdfUealfE",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "881f9c41-433e-4780-fdfd-b97ba6690384"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_eb670ce2-227a-4d17-9fb2-f7d64902f741\", \"preprocess_modeling_data.pkl\", 4881855)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1062,7 +1136,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dc84cbc5-8bd6-4ecf-ef32-e21bba64e36d"
+        "outputId": "dc84cbc5-8bd6-4ecf-ef32-e21bba64e36d",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -1841,26 +1916,84 @@
       "source": [
         "# Save Model\n",
         "import joblib\n",
-        "joblib.dump(final_model, 'final_lightgbm_model.pkl')"
+        "joblib.dump(final_model, 'final_lightgbm_model.pkl')\n",
+        "\n",
+        "from google.colab import files\n",
+        "files.download('final_lightgbm_model.pkl')"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 17
         },
         "id": "_TuJ4FHFJFA7",
-        "outputId": "9b218f4d-0375-47a9-e2eb-3e86e062a6cf"
+        "outputId": "070a346f-cc4b-4f6f-d62a-6a3ad6a293f9"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "['final_lightgbm_model.pkl']"
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
             ]
           },
-          "metadata": {},
-          "execution_count": 25
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_721709dc-8653-424b-bb12-b3d84d883330\", \"final_lightgbm_model.pkl\", 673892)"
+            ]
+          },
+          "metadata": {}
         }
       ]
     },
