--- a/Code/concatenating-weekly-df.ipynb
+++ b/Code/concatenating-weekly-df.ipynb
@@ -42,23 +42,28 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install --upgrade pandas-gbq google-cloud-bigquery\n"
+        "!pip install --upgrade pandas-gbq google-cloud-bigquery"
       ],
       "metadata": {
         "id": "2IUGBOXbWXti",
-        "outputId": "bbb2ba88-97d3-48d9-8375-05585aceb7ac",
+        "outputId": "b98e5cc7-35e3-4a69-a677-bfa778fc41b3",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         }
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pandas-gbq in /usr/local/lib/python3.10/dist-packages (0.26.0)\n",
-            "Requirement already satisfied: google-cloud-bigquery in /usr/local/lib/python3.10/dist-packages (3.27.0)\n",
+            "Requirement already satisfied: pandas-gbq in /usr/local/lib/python3.10/dist-packages (0.25.0)\n",
+            "Collecting pandas-gbq\n",
+            "  Downloading pandas_gbq-0.26.0-py2.py3-none-any.whl.metadata (3.3 kB)\n",
+            "Requirement already satisfied: google-cloud-bigquery in /usr/local/lib/python3.10/dist-packages (3.25.0)\n",
+            "Collecting google-cloud-bigquery\n",
+            "  Downloading google_cloud_bigquery-3.27.0-py2.py3-none-any.whl.metadata (8.6 kB)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from pandas-gbq) (75.1.0)\n",
             "Requirement already satisfied: db-dtypes<2.0.0,>=1.0.4 in /usr/local/lib/python3.10/dist-packages (from pandas-gbq) (1.3.1)\n",
             "Requirement already satisfied: numpy>=1.18.1 in /usr/local/lib/python3.10/dist-packages (from pandas-gbq) (1.26.4)\n",
@@ -91,8 +96,35 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.21.0->google-cloud-bigquery) (2.2.3)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0dev,>=2.21.0->google-cloud-bigquery) (2024.12.14)\n",
             "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in /usr/local/lib/python3.10/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=2.13.0->pandas-gbq) (0.6.1)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.7.0->pandas-gbq) (3.2.2)\n"
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.7.0->pandas-gbq) (3.2.2)\n",
+            "Downloading pandas_gbq-0.26.0-py2.py3-none-any.whl (36 kB)\n",
+            "Downloading google_cloud_bigquery-3.27.0-py2.py3-none-any.whl (240 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m240.1/240.1 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: google-cloud-bigquery, pandas-gbq\n",
+            "  Attempting uninstall: google-cloud-bigquery\n",
+            "    Found existing installation: google-cloud-bigquery 3.25.0\n",
+            "    Uninstalling google-cloud-bigquery-3.25.0:\n",
+            "      Successfully uninstalled google-cloud-bigquery-3.25.0\n",
+            "  Attempting uninstall: pandas-gbq\n",
+            "    Found existing installation: pandas-gbq 0.25.0\n",
+            "    Uninstalling pandas-gbq-0.25.0:\n",
+            "      Successfully uninstalled pandas-gbq-0.25.0\n",
+            "Successfully installed google-cloud-bigquery-3.27.0 pandas-gbq-0.26.0\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "google"
+                ]
+              },
+              "id": "6761203384f24f4f9d5d2580acf85091"
+            }
+          },
+          "metadata": {}
         }
       ]
     },
@@ -100,12 +132,12 @@
       "cell_type": "code",
       "source": [
         "from google.colab import auth\n",
-        "auth.authenticate_user()\n"
+        "auth.authenticate_user()"
       ],
       "metadata": {
         "id": "Ym7z8xPoWeOS"
       },
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -159,7 +191,7 @@
           "shell.execute_reply": "2024-12-06T22:08:52.187154Z"
         },
         "id": "jpEfwvTFVyES",
-        "outputId": "b8b3b1bd-78f4-4cce-bf7b-ae564eac2354",
+        "outputId": "401c3ffb-9780-4b2e-d272-40a16d73174d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -209,7 +241,7 @@
           ]
         }
       ],
-      "execution_count": 8
+      "execution_count": 3
     },
     {
       "cell_type": "code",
@@ -240,12 +272,12 @@
       ],
       "metadata": {
         "id": "6LA6lpioX5m3",
-        "outputId": "6c7a5032-a0ec-4829-d3bb-975fdb0d953d",
+        "outputId": "2af58b08-738e-419f-9120-6c376b0e19cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +442,7 @@
           "shell.execute_reply": "2024-12-06T22:08:55.229906Z"
         },
         "id": "8bqUBmVRVyEU",
-        "outputId": "b07cacc6-a2c6-41a3-87b1-279c51139b72",
+        "outputId": "7a5fc97b-2909-4536-8388-edb6e5891729",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -420,7 +452,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1/1 [00:00<00:00, 801.82it/s]"
+            "100%|██████████| 1/1 [00:00<00:00, 661.25it/s]"
           ]
         },
         {
@@ -438,7 +470,7 @@
           ]
         }
       ],
-      "execution_count": 10
+      "execution_count": 5
     },
     {
       "cell_type": "code",
@@ -453,13 +485,13 @@
       ],
       "metadata": {
         "id": "njjIE5DOXdcy",
-        "outputId": "43f123d4-1734-4407-f1b4-5b73817dde6f",
+        "outputId": "92d14b43-bcc6-47b9-8afc-afcbdbef94a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         }
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -520,7 +552,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_6cbf702e-f520-47c5-9b08-feb402740649\", \"final_bdb_aggregated_data.csv\", 2840627)"
+              "download(\"download_4e6897aa-a16c-4a9d-bced-8ff903553e53\", \"final_bdb_aggregated_data.csv\", 2840624)"
             ]
           },
           "metadata": {}
